codama-macros/tests/codama_attribute/type_nodes/struct_field_type_node/type_already_set.fail.rs
use codama_macros::codama;

#[codama(type = field(number(u8), "age", number(u32)))]
pub struct Test;

#[codama(type = field(type = number(u8), name = "age", type = number(u32)))]
pub struct TestExplicit;

fn main() {}
